# tulahack-2026

./: .env_example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f7d4924145c5_init.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  deps.py
backend/app/api/routers/: auth.py  search.py  teams.py  users.py
backend/app/database/: db.py  models.py
backend/app/repositories/: search.py  team.py  user.py
backend/app/schemas/: search.py  team.py  user.py
backend/app/services/: auth.py  search.py
frontend/: components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/assets/: main.css
frontend/src/features/auth/: LoginPage.vue  LoginView.vue  RegisterPage.vue  RegisterView.vue
frontend/src/features/dashboard/: DashboardView.vue
frontend/src/features/manager/: CandidateCard.vue  DashboardPage.vue  ManagerDashboard.vue  SearchForm.vue  SearchHistory.vue  SearchResultCard.vue  SearchResultPage.vue  SearchResults.vue
frontend/src/features/profile/: ProfileCard.vue  ProfileDashboard.vue  ProfileEditForm.vue  ProfilePage.vue
frontend/src/features/team/: TeamPage.vue
frontend/src/router/: index.js  index.ts
frontend/src/shared/api/: auth.js  client.js  client.ts  search.js  teams.js  types.ts  users.js
frontend/src/shared/components/: AppLayout.vue  CompatibilityScore.vue  DiscChart.vue  (+3 more)
frontend/src/stores/: auth.js  auth.ts  search.js  search.ts  teams.js
task/: openapi.yaml  task.md
(+2 files in other folders)
