[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "databases>=0.9.0",
    "fastapi>=0.136.0",
    "google-genai>=1.73.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.2",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
